[package]
name = "bevy-2d-base"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
leafwing-input-manager = "0.9.0"
rapier2d = { version = "0.17.2", features = [
    "simd-stable",
    "debug-render",
] }
