[package]
name = "bevy-2d-base"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
leafwing-input-manager = "0.9.0"
bevy_rapier2d = "0.21.0"

# Repleace these with proper versions once they update to 0.10 support (SoonTM)
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "main" }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/geieredgar/bevy_ecs_tilemap", branch = "bevy_track" }
